// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findSolutions should solve the puzzle 1`] = `
Object {
  "results": Array [
    Object {
      "count": 9,
      "hash": "{\\"jugs\\":[0,4],\\"nextAction\\":\\"fill\\",\\"nextJug\\":{\\"name\\":\\"jug 1\\",\\"amount\\":0,\\"size\\":3}}",
      "result": true,
    },
    Object {
      "count": 7,
      "hash": "{\\"jugs\\":[3,4],\\"nextAction\\":\\"pour\\",\\"nextJug\\":{\\"name\\":\\"jug 1\\",\\"amount\\":3,\\"size\\":3}}",
      "result": true,
    },
  ],
  "stepList": Array [
    Array [
      Object {
        "jugs": Array [
          3,
          0,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 3,
          "name": "jug 1",
          "size": 3,
        },
      },
      Object {
        "jugs": Array [
          0,
          3,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 3,
          "name": "jug 1",
          "size": 3,
        },
      },
      Object {
        "jugs": Array [
          3,
          3,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 3,
          "name": "jug 1",
          "size": 3,
        },
      },
      Object {
        "jugs": Array [
          1,
          5,
        ],
        "nextAction": "empty",
        "nextJug": Object {
          "amount": 4,
          "name": "jug 2",
          "size": 5,
        },
      },
      Object {
        "jugs": Array [
          1,
          0,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 3,
          "name": "jug 1",
          "size": 3,
        },
      },
      Object {
        "jugs": Array [
          0,
          1,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 3,
          "name": "jug 1",
          "size": 3,
        },
      },
      Object {
        "jugs": Array [
          3,
          1,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 3,
          "name": "jug 1",
          "size": 3,
        },
      },
    ],
    Array [
      Object {
        "jugs": Array [
          0,
          5,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 4,
          "name": "jug 2",
          "size": 5,
        },
      },
      Object {
        "jugs": Array [
          3,
          2,
        ],
        "nextAction": "empty",
        "nextJug": Object {
          "amount": 3,
          "name": "jug 1",
          "size": 3,
        },
      },
      Object {
        "jugs": Array [
          0,
          2,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 4,
          "name": "jug 2",
          "size": 5,
        },
      },
      Object {
        "jugs": Array [
          2,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 4,
          "name": "jug 2",
          "size": 5,
        },
      },
      Object {
        "jugs": Array [
          2,
          5,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 4,
          "name": "jug 2",
          "size": 5,
        },
      },
    ],
  ],
  "winner": "2",
}
`;

exports[`findSolutions should solve the puzzle 2`] = `
Object {
  "results": Array [
    Object {
      "count": 3,
      "hash": "{\\"jugs\\":[7,4],\\"nextAction\\":\\"pour\\",\\"nextJug\\":{\\"name\\":\\"jug 2\\",\\"amount\\":4,\\"size\\":4}}",
      "result": true,
    },
    Object {
      "count": 27,
      "hash": "{\\"jugs\\":[7,0],\\"nextAction\\":\\"fill\\",\\"nextJug\\":{\\"name\\":\\"jug 2\\",\\"amount\\":0,\\"size\\":4}}",
      "result": true,
    },
  ],
  "stepList": Array [
    Array [
      Object {
        "jugs": Array [
          11,
          0,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 7,
          "name": "jug 1",
          "size": 11,
        },
      },
    ],
    Array [
      Object {
        "jugs": Array [
          0,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          4,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          4,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          8,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          8,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          11,
          1,
        ],
        "nextAction": "empty",
        "nextJug": Object {
          "amount": 7,
          "name": "jug 1",
          "size": 11,
        },
      },
      Object {
        "jugs": Array [
          0,
          1,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          1,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          1,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          5,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          5,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          9,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          9,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          11,
          2,
        ],
        "nextAction": "empty",
        "nextJug": Object {
          "amount": 7,
          "name": "jug 1",
          "size": 11,
        },
      },
      Object {
        "jugs": Array [
          0,
          2,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          2,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          2,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          6,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          6,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          10,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          10,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          11,
          3,
        ],
        "nextAction": "empty",
        "nextJug": Object {
          "amount": 7,
          "name": "jug 1",
          "size": 11,
        },
      },
      Object {
        "jugs": Array [
          0,
          3,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          3,
          0,
        ],
        "nextAction": "fill",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
      Object {
        "jugs": Array [
          3,
          4,
        ],
        "nextAction": "pour",
        "nextJug": Object {
          "amount": 0,
          "name": "jug 2",
          "size": 4,
        },
      },
    ],
  ],
  "winner": "1",
}
`;
